  - A new LSP option "enable_router_port_acl" has been added to enable
    conntrack for the router port whose peer is l3dgw_port if set it true.
  - Enable PMTU discovery on geneve/vxlan tunnels for E/W traffic.
  - Support selecting encapsulation IP based on the source/destination VIF's
    settting. See ovn-controller(8) 'external_ids:ovn-encap-ip' for more
    details.

OVN v23.09.0 - 15 Sep 2023
--------------------------
  - Added FDB aging mechanism, that is disabled by default.
    It can be enabled per logical switch with other_config
    "fdb_age_threshold".
  - Add DHCPv6 "fqdn" (39) option, that works similarly to
    DHCPv4 "hostname" (12) option.
  - Support to create/update MAC_Binding when GARP received from VTEP (RAMP)
    switch on l3dgw port.
  - To allow optimizing ovn-controller's monitor conditions for the regular
    VIF case, ovn-controller now unconditionally monitors all sub-ports
    (ports with parent_port set).
  - ECMP routes use L4_SYM dp-hash by default if the datapath supports it.
    Existing sessions might get re-hashed to a different ECMP path when
    OVN detects the algorithm support in the datapath during an upgrade
    or restart of ovn-controller.
  - Add "northd-backoff-interval-ms" config option to delay northd engine
    runs capped at the set value.
  - Add "garp-max-timeout-sec" config option to vswitchd external-ids to
    cap the time between when ovn-controller sends gARP packets.
  - Introduce support for binding remote ports in ovn-northd if the CMS sets
    requested-chassis option for a remote logical switch port.
  - Added support to reply success for DHCPv6 Release messages.


OVN v23.06.0 - 01 Jun 2023
--------------------------
  - Enhance LSP.options:arp_proxy to support IPv6, configurable MAC
    addresses and CIDRs.
  - CT entries are not flushed by default anymore whenever a load balancer
    backend is removed.  A new, per-LB, option 'ct_flush' can be used to